// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetsReducer should update state upon delete success 1`] = `
Object {
  "objects": Object {},
  "status": "loaded",
}
`;

exports[`AssetsReducer should update state upon failure 1`] = `
Object {
  "error": "Some error",
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
  },
  "status": "error",
}
`;

exports[`AssetsReducer should update state upon failure 2`] = `
Object {
  "error": "Some error",
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
  },
  "status": "error",
}
`;

exports[`AssetsReducer should update state upon failure 3`] = `
Object {
  "error": "Some error",
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
  },
  "status": "error",
}
`;

exports[`AssetsReducer should update state upon load success 1`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
    "99": Object {
      "id": "99",
      "instanceId": "34",
      "lastValuation": 260000,
      "name": "38/8 Briggs Road",
      "type": "RealEstate",
    },
  },
  "status": "loaded",
}
`;

exports[`AssetsReducer should update state upon put success 1`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
    "99": Object {
      "id": "99",
      "instanceId": "34",
      "lastValuation": 260000,
      "name": "38/8 Briggs Road",
      "type": "RealEstate",
    },
  },
  "status": "loaded",
}
`;

exports[`AssetsReducer should update state upon request 1`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
  },
  "status": "loading",
}
`;

exports[`AssetsReducer should update state upon request 2`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
  },
  "status": "loading",
}
`;

exports[`AssetsReducer should update state upon request 3`] = `
Object {
  "objects": Object {
    "98": Object {
      "id": "98",
      "instanceId": "54",
      "lastValuation": 705000,
      "name": "5 Sunrise St",
      "type": "RealEstate",
    },
  },
  "status": "loading",
}
`;
